// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login react component Enterint text in input changes value 1`] = `
<div>
  <h1 />
  <p>
    Please log in
  </p>
  <form
    onSubmit={[Function]}
  >
    <div>
      <label
        htmlFor="username"
        required={false}
      >
        Username
      </label>
      <input
        name="username"
        onChange={[Function]}
        placeholder="Username"
        value="haschanged"
      />
    </div>
    <div>
      <label
        htmlFor="password"
        required={false}
      >
        Password
      </label>
      <input
        name="password"
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value="haschanged"
      />
    </div>
    <button
      disabled={false}
    >
      Sign in
    </button>
  </form>
</div>
`;

exports[`Login react component Marks button as valid if both fields has 5 characters 1`] = `
<div>
  <h1 />
  <p>
    Please log in
  </p>
  <form
    onSubmit={[Function]}
  >
    <div>
      <label
        htmlFor="username"
        required={false}
      >
        Username
      </label>
      <input
        name="username"
        onChange={[Function]}
        placeholder="Username"
        value=""
      />
    </div>
    <div>
      <label
        htmlFor="password"
        required={false}
      >
        Password
      </label>
      <input
        name="password"
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value=""
      />
    </div>
    <button
      disabled={true}
    >
      Form fields not valid
    </button>
  </form>
</div>
`;

exports[`Login react component Marks button as valid if both fields has 5 characters 2`] = `
<div>
  <h1 />
  <p>
    Please log in
  </p>
  <form
    onSubmit={[Function]}
  >
    <div>
      <label
        htmlFor="username"
        required={false}
      >
        Username
      </label>
      <input
        name="username"
        onChange={[Function]}
        placeholder="Username"
        value="More than 5"
      />
    </div>
    <div>
      <label
        htmlFor="password"
        required={false}
      >
        Password
      </label>
      <input
        name="password"
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value="More than 5"
      />
    </div>
    <button
      disabled={false}
    >
      Sign in
    </button>
  </form>
</div>
`;

exports[`Login react component Matches earlier configuration 1`] = `
<div>
  <h1>
    This is a title
  </h1>
  <p>
    Please log in
  </p>
  <form
    onSubmit={[Function]}
  >
    <div>
      <label
        htmlFor="username"
        required={false}
      >
        Username
      </label>
      <input
        name="username"
        onChange={[Function]}
        placeholder="Username"
        value=""
      />
    </div>
    <div>
      <label
        htmlFor="password"
        required={false}
      >
        Password
      </label>
      <input
        name="password"
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value=""
      />
    </div>
    <button
      disabled={true}
    >
      Form fields not valid
    </button>
  </form>
</div>
`;

exports[`Login react component Returns an error if password is invalid 1`] = `
<div>
  <h1>
    This is a title
  </h1>
  <p>
    Please log in
  </p>
  <p>
    It appears something went terribly wrong!
  </p>
  <form
    onSubmit={[Function]}
  >
    <div>
      <label
        htmlFor="username"
        required={false}
      >
        Username
      </label>
      <input
        name="username"
        onChange={[Function]}
        placeholder="Username"
        value="Yoda"
      />
    </div>
    <div>
      <label
        htmlFor="password"
        required={false}
      >
        Password
      </label>
      <input
        name="password"
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value="Wrong password this is"
      />
    </div>
    <button
      disabled={false}
    >
      Sign in
    </button>
  </form>
</div>
`;

exports[`Login react component Returns an error if username is invalid 1`] = `
<div>
  <h1>
    This is a title
  </h1>
  <p>
    Please log in
  </p>
  <p>
    It appears something went terribly wrong!
  </p>
  <form
    onSubmit={[Function]}
  >
    <div>
      <label
        htmlFor="username"
        required={false}
      >
        Username
      </label>
      <input
        name="username"
        onChange={[Function]}
        placeholder="Username"
        value="This name doesn't exist in Star Wars"
      />
    </div>
    <div>
      <label
        htmlFor="password"
        required={false}
      >
        Password
      </label>
      <input
        name="password"
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value="password"
      />
    </div>
    <button
      disabled={false}
    >
      Sign in
    </button>
  </form>
</div>
`;

exports[`Login react component Signs in the user of password and username are correct 1`] = `
<div>
  <h1>
    This is a title
  </h1>
  <p>
    Please log in
  </p>
  <form
    onSubmit={[Function]}
  >
    <div>
      <label
        htmlFor="username"
        required={false}
      >
        Username
      </label>
      <input
        name="username"
        onChange={[Function]}
        placeholder="Username"
        value="Yoda"
      />
    </div>
    <div>
      <label
        htmlFor="password"
        required={false}
      >
        Password
      </label>
      <input
        name="password"
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value="password"
      />
    </div>
    <button
      disabled={false}
    >
      Sign in
    </button>
  </form>
</div>
`;
